@@ -1,3 +1,12 @@
+2011-08-26  Vladimir Makarov  <vmakarov@redhat.com>
+
+	* lra-constraints.c (best_reload_nregs): New variable.
+	(process_alt_operands): Add preferences for smaller hard registers
+	involved.  Increase reject for all failed non registers.
+
+	* lra-eliminations.c (mark_not_eliminable): Add check on hard
+	register before looping on eliminations.
+
 2011-08-25  Vladimir Makarov  <vmakarov@redhat.com>
 
 	* lra.c (remove_scratches): Don't rescan insn.
